// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CertificationTab should render 1`] = `
<div>
  <div
    class="makeStyles-tableWrapper-219"
  >
    <div
      class="makeStyles-filterActionsContainer-230 makeStyles-filterActionsContainerPadding-232"
    >
      <div
        class="MuiBox-root MuiBox-root-310 makeStyles-filterStatusContainer-233"
      >
        <div
          class="MuiBox-root MuiBox-root-311 makeStyles-filterStatusContainer-233 makeStyles-autocompleteFilterStatus-250"
        >
          <div
            class="makeStyles-floatingFilterWrapper-239 makeStyles-filterWrapper-238 makeStyles-buttonContainer-313 floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-240"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-248"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Projects
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-242"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <table
      aria-label="device-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Certification ID
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Completion Date
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Expiration Date
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Project
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-317"
          data-testid="certification-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            test certification-g
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            1892132
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="row-completion"
          >
            January 01, 2001
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="row-expiration"
          >
            January 01, 2001
             
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-noTopCell-257 makeStyles-threeDotsWrapper-246"
            data-testid="row-project"
          >
            <a
              class="Link-root-318"
              href="/projects/detail/9164e4c4-6521-47bb-97fd-c75ac02b2cf2"
              title="View Project detail"
            >
              Project Name
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="update-delete-cell"
          />
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-319"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`CertificationTab should render detail loading 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="makeStyles-tableWrapper-519"
  >
    <div
      class="makeStyles-filterActionsContainer-530 makeStyles-filterActionsContainerPadding-532"
    >
      <div
        class="MuiBox-root MuiBox-root-610 makeStyles-filterStatusContainer-533"
      >
        <div
          class="MuiBox-root MuiBox-root-611 makeStyles-filterStatusContainer-533 makeStyles-autocompleteFilterStatus-550"
        >
          <div
            class="makeStyles-floatingFilterWrapper-539 makeStyles-filterWrapper-538 makeStyles-buttonContainer-613 floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-540"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-548"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Projects
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-542"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <table
      aria-label="device-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Certification ID
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Completion Date
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Expiration Date
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Project
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-617"
          data-testid="certification-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            test certification-g
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            1892132
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="row-completion"
          >
            January 01, 2001
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="row-expiration"
          >
            January 01, 2001
             
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-noTopCell-557 makeStyles-threeDotsWrapper-546"
            data-testid="row-project"
          >
            <a
              class="Link-root-618"
              href="/projects/detail/9164e4c4-6521-47bb-97fd-c75ac02b2cf2"
              title="View Project detail"
            >
              Project Name
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="update-delete-cell"
          />
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-619"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`CertificationTab should render loading 1`] = `
<div>
  <div
    class="makeStyles-tableWrapper-421"
  >
    <div
      class="makeStyles-filterActionsContainer-432 makeStyles-filterActionsContainerPadding-434"
    >
      <div
        class="MuiBox-root MuiBox-root-512 makeStyles-filterStatusContainer-435"
      >
        <div
          class="MuiBox-root MuiBox-root-513 makeStyles-filterStatusContainer-435 makeStyles-autocompleteFilterStatus-452"
        >
          <div
            class="makeStyles-floatingFilterWrapper-441 makeStyles-filterWrapper-440 makeStyles-buttonContainer-515 floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-442"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-450"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Projects
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-444"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    Loading...
  </div>
</div>
`;

exports[`CertificationTab should render with secondary values 1`] = `
<div>
  <div
    class="makeStyles-tableWrapper-320"
  >
    <div
      class="makeStyles-filterActionsContainer-331 makeStyles-filterActionsContainerPadding-333"
    >
      <div
        class="MuiBox-root MuiBox-root-411 makeStyles-filterStatusContainer-334"
      >
        <div
          class="MuiBox-root MuiBox-root-412 makeStyles-filterStatusContainer-334 makeStyles-autocompleteFilterStatus-351"
        >
          <div
            class="makeStyles-floatingFilterWrapper-340 makeStyles-filterWrapper-339 makeStyles-buttonContainer-414 floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-341"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-349"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Projects
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-343"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <table
      aria-label="device-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Certification ID
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Completion Date
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Expiration Date
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Project
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-418"
          data-testid="certification-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            test certification-g
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            1892132
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="row-completion"
          >
            January 01, 2001
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="row-expiration"
          >
            January 01, 2001
             
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-noTopCell-358 makeStyles-threeDotsWrapper-347"
            data-testid="row-project"
          >
            <a
              class="Link-root-419"
              href="/projects/detail/9164e4c4-6521-47bb-97fd-c75ac02b2cf2"
              title="View Project detail"
            >
              Project Name
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="update-delete-cell"
          />
        </tr>
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-418"
          data-testid="certification-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            test other cert
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            329812
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="row-completion"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="row-expiration"
          >
            -
             
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-noTopCell-358 makeStyles-threeDotsWrapper-347"
            data-testid="row-project"
          >
            <a
              class="Link-root-419"
              href="/projects/detail/8aa1c4c4-6521-47bb-27fd-af5ac02b2cd8"
              title="View Project detail"
            >
              Project Name 2
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="update-delete-cell"
          />
        </tr>
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-418"
          data-testid="certification-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            test other cert
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="row-completion"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="row-expiration"
          >
            -
             
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-noTopCell-358 makeStyles-threeDotsWrapper-347"
            data-testid="row-project"
          >
            <a
              class="Link-root-419"
              href="/projects/detail/8aa1c4c4-6521-47bb-27fd-af5ac02b2cd8"
              title="View Project detail"
            >
              Project Name 2
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="update-delete-cell"
          />
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-420"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
